# todo-app-python

./: .dockerignore  Dockerfile  LICENSE  README.md  compose.yaml  pyproject.toml
src/todo_app_python/: __init__.py  database.py  settings.py
