[project]
name = "todo-app-python"
version = "0.1.0"
description = "Add your description here"
dependencies = [
    "fastapi>=0.110.2",
    "uvicorn[standard]>=0.29.0",
    "gunicorn>=22.0.0",
    "asyncpg>=0.29.0",
    "sqlalchemy[asyncio]>=2.0.29",
    "sqlmodel>=0.0.16",
    "pydantic-settings>=2.2.1",
]
readme = "README.md"
requires-python = ">= 3.8"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.rye]
managed = true
dev-dependencies = []

[tool.hatch.metadata]
allow-direct-references = true

[tool.hatch.build.targets.wheel]
packages = ["src/todo_app_python"]
